Fix overlapping hide div with arrow icon.

--- a/src/notebook.scss
+++ b/src/notebook.scss
@@ -176,6 +176,10 @@ body.notebook {
         .collapsible-header {
           padding-right: 30px;
           border-radius: 8px;
+
+          div {
+            width: auto;
+          }
         }
 
       }
